--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header">Weather App</div>
 
         <div class="current-weather-stats">
-            <svg viewBox="0 0 400 300" xmlns="http://www.w3.org/2000/svg">
+            <svg viewBox="0 0 400 300" xmlns="http://www.w3.org/2000/svg" width="400px" height="300px">
                 <rect width="400" height="300" fill="#F0F7FF"/>
                 
                 <text x="200" y="25" text-anchor="middle" font-family="Arial" font-size="14" fill="#2C3E50" font-weight="bold">Weekly Weather Summary</text>
