--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="app-container">
-        <div class="header">Weather App</div>
+        <div class="header">Welcome to CoolWeather! </div>
 
         <div class="current-weather-stats">
             <svg viewBox="0 0 400 300" xmlns="http://www.w3.org/2000/svg" style="width: 1200px;">
