--- a/pittsburgh.html
+++ b/pittsburgh.html
@@ -23,7 +23,7 @@
             <rect width="400" height="200" fill="#F0F7FF" />
 
             <text x="200" y="20" text-anchor="middle" font-family="Arial" font-size="12" fill="#2C3E50"
-                font-weight="bold">Philadelphia's Weekly Weather Summary</text>
+                font-weight="bold">Pittsburgh Weekly Weather Summary</text>
 
             <g transform="translate(25, 30)">
                 <rect width="350" height="60" rx="5" fill="white" stroke="#E0E6ED" />
@@ -86,12 +86,13 @@
                 </g>
             </g>
             </svg>
-        </div>
+            </div>
         <div class="forecast">
             <div class="forecast-row">
                 <div class="forecast-card">
                     <img src="sun.png" alt="Sunny icon">
-                    <p>Sunday, February 9th</p>
+                    <p>Sunday,
+                        February 9th</p>
                     <div class="temp-container">
                         <div class="temp-high">
                             High: 75°F @ 2:43 PM
